--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -13,7 +13,8 @@
     "clsx": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
@@ -27,5 +28,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:8000"
 }
