--- a/examples/admin-appsync/package.json
+++ b/examples/admin-appsync/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.1",
     "aws-amplify": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
