--- a/examples/admin-appsync/package.json
+++ b/examples/admin-appsync/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.1",
     "aws-amplify": "^4.0.3",
+    "luxon": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
