--- a/examples/admin-appsync/package.json
+++ b/examples/admin-appsync/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "aws-amplify": "^4.0.3",
     "luxon": "^1.27.0",
     "react": "^17.0.2",
