--- a/examples/package.json
+++ b/examples/package.json
@@ -7,6 +7,7 @@
   "resolutions": {
     "browserslist": "^4.16.6",
     "glob-parent": "^6.0.0",
-    "normalize-url": "^6.0.1"
+    "normalize-url": "^6.0.1",
+    "postcss":"^7.0.36"
   }
 }
