--- a/examples/transaction-import/pyproject.toml
+++ b/examples/transaction-import/pyproject.toml
@@ -11,6 +11,7 @@ pydantic = {extras = ["email"], version = "^1.8.2"}
 requests = "^2.26.0"
 docopt = "^0.6.2"
 coinaddr = "^1.0.1"
+jwcrypto = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
