--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -9,11 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@material-ui/core": "latest",
-    "clsx": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-scripts": "latest",
+    "@material-ui/core": "^4.12.3",
+    "clsx": "^1.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
     "socket.io-client": "^4.0.0",
     "uuid": "^8.3.2"
   },
