Adds set-value to examples resolutions.

--- a/examples/package.json
+++ b/examples/package.json
@@ -9,6 +9,7 @@
     "glob-parent": "^6.0.0",
     "immer": "^9.0.6",
     "normalize-url": "^6.0.1",
-    "postcss": "^7.0.36"
+    "postcss": "^7.0.36",
+    "set-value": "^4.1.0"
   }
 }
