--- a/examples/transaction-import/pyproject.toml
+++ b/examples/transaction-import/pyproject.toml
@@ -12,6 +12,8 @@ requests = "^2.26.0"
 docopt = "^0.6.2"
 coinaddr = "^1.0.1"
 jwcrypto = "^1.0"
+awslambdaric = "^1.2.2"
+boto3 = "^1.18.41"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
