--- a/Makefile.common
+++ b/Makefile.common
@@ -60,7 +60,7 @@ build:
 
 	@$(call logme,"Build base image")
 	docker build \
-		--file Dockerfile \
+		--file examples/transaction-import/Dockerfile \
 		--tag $(DOCKER_REGISTRY)/$(DOCKER_IMAGE):$(DOCKER_TAG) \
 		--label build.commit.hash="$(shell git log -1 --format=%H)" \
 		--label build.commit.shorthash="$(shell git log -1 --format=%h)" \
