--- a/Makefile.common
+++ b/Makefile.common
@@ -10,7 +10,7 @@ REPOSITORY ?= $(shell basename $(PWD))
 export DOCKER_IMAGE ?= $(OWNER)/$(REPOSITORY)/$(shell echo $(REPOSITORY) | sed -E 's|^pti-||')
 export DOCKER_TAG ?= $(shell V="$$(git describe --tags --match='[0-9][0-9.]*' --dirty 2>/dev/null)"; if [ "$$V" = "" ]; then git fetch --no-tags --prune origin +refs/heads/master:refs/remotes/origin/master && echo "0.0.0-$$(git rev-list --count origin/master)-$$(git rev-parse --short HEAD)"; else echo "$$V"; fi)
 export DOCKER_REGISTRY ?= docker.pkg.github.com
-export DOCKER_CONTEXT ?= .
+export DOCKERFILE_DIR ?= .
 ECR_REGISTRY ?= 210944367560.dkr.ecr.us-west-2.amazonaws.com
 
 # can be used to define an HTTP proxy for APT, for example
@@ -49,7 +49,7 @@ docker-login:
 	@$(call check_defined,DOCKER_USERNAME)
 	@$(call check_defined,DOCKER_PASSWORD)
 
-	docker login -u $(DOCKER_USERNAME) -p $(DOCKER_PASSWORD) $(DOCKER_REGISTRY) >/dev/null 2>&1
+	docker login -u $(DOCKER_USERNAME) -p $(DOCKER_PASSWORD) $(DOCKER_REGISTRY)
 ecr-login:
 	@$(call check_defined,AWS_ACCESS_KEY_ID)
 	@$(call check_defined,AWS_SECRET_ACCESS_KEY)
@@ -77,7 +77,7 @@ build-ecr:
 
 	@$(call logme,"Build base image")
 	docker build \
-		--file $(DOCKER_CONTEXT)/Dockerfile \
+		--file $(DOCKERFILE_DIR)/Dockerfile \
 		--tag $(ECR_REGISTRY)/$(DOCKER_IMAGE):$(DOCKER_TAG) \
 		--label build.commit.hash="$(shell git log -1 --format=%H)" \
 		--label build.commit.shorthash="$(shell git log -1 --format=%h)" \
@@ -86,7 +86,7 @@ build-ecr:
 		--label build.docker.image.created_on="$(shell date -u +"%Y-%m-%dT%H:%M:%SZ")" \
 		$(DOCKER_BUILD_ARGS) \
 		--force-rm \
-		$(DOCKER_CONTEXT)
+		$(DOCKERFILE_DIR)
 
 release: build
 	@$(call check_defined,DOCKER_TAG)
