Trying to get CodeQL to cooperate

--- a/.github/codeql/codeql_config.yaml
+++ b/.github/codeql/codeql_config.yaml
@@ -7,5 +7,9 @@ queries:
     uses: security-extended
   - name: Security and Quality
     uses: security-and-quality
-  - name: Custom query suit
-    uses: starcard-org/pti-codeql/javascript/pti-client/query-suit.qls@master
+
+paths:
+  - examples/transaction-import
+
+languages:
+  - Python
