--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,12 +82,12 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
 
-      - name: Build the Docker image in ecr
-        run: DOCKER_USERNAME=${GIT_USERNAME} DOCKER_PASSWORD=${GIT_KEY} make ecr-release
+      - name: Build the transaction-import Docker image in ecr
+        run: DOCKER_USERNAME=${GIT_USERNAME} DOCKER_PASSWORD=${GIT_KEY} DOCKERFILE_DIR=examples/transaction-import DOCKER_IMAGE=transaction-import-lambda make ecr-release
 
       - name: Build the transaction-import Docker image
         run: |
-          DOCKER_USERNAME=${GIT_USERNAME} DOCKER_PASSWORD=${GIT_KEY} DOCKER_CONTEXT=examples/transaction-import DOCKER_IMAGE=transaction-import make release
+          DOCKER_USERNAME=${GIT_USERNAME} DOCKER_PASSWORD=${GIT_KEY} DOCKERFILE_DIR=examples/transaction-import DOCKER_IMAGE=transaction-import-lambda make release
           echo "CONTAINER_IMAGE=$(cat /tmp/com.pti.container.image)" >> $GITHUB_ENV
 
       - name: Scan the image
