--- a/Makefile.common
+++ b/Makefile.common
@@ -61,7 +61,7 @@ build:
 
 	@$(call logme,"Build base image")
 	docker build \
-		--file $(DOCKER_CONTEXT)/Dockerfile \
+		--file $(DOCKERFILE_DIR)/Dockerfile \
 		--tag $(DOCKER_REGISTRY)/$(DOCKER_IMAGE):$(DOCKER_TAG) \
 		--label build.commit.hash="$(shell git log -1 --format=%H)" \
 		--label build.commit.shorthash="$(shell git log -1 --format=%h)" \
@@ -70,7 +70,7 @@ build:
 		--label build.docker.image.created_on="$(shell date -u +"%Y-%m-%dT%H:%M:%SZ")" \
 		$(DOCKER_BUILD_ARGS) \
 		--force-rm \
-		$(DOCKER_CONTEXT)
+		$(DOCKERFILE_DIR)
 
 build-ecr:
 	@$(call check_defined,DOCKER_TAG)
