making docker build work

--- a/examples/transaction-import/Dockerfile
+++ b/examples/transaction-import/Dockerfile
@@ -6,7 +6,6 @@ FROM python:3.8.12-slim-bullseye as build-image
 RUN apt-get update && apt-get install --no-install-recommends -y g++
 
 ARG FUNCTION_DIR
-
 RUN mkdir -p ${FUNCTION_DIR}
 
 WORKDIR ${FUNCTION_DIR}
@@ -22,6 +21,7 @@ RUN pip install \
 FROM python:3.8.12-slim-bullseye
 
 ARG FUNCTION_DIR
+RUN mkdir -p ${FUNCTION_DIR}
 
 COPY pti_tools.py ${FUNCTION_DIR}
 COPY lambda.py ${FUNCTION_DIR}
