trying to eliminate java

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,13 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master ]
     tags:
       - '*'
-
   pull_request:
     branches: [ master ]
-
-  workflow_dispatch:
 
 
 env:
@@ -53,11 +51,11 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-          java-package: jdk
+#      - name: Setup Java
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: '11'
+#          java-package: jdk
 
 
       - name: Login to the registry
@@ -72,15 +70,15 @@ jobs:
           # ...and ensure it's executable.
           sudo chmod a+x ./twistcli
 
-#      - name: Initialize CodeQL
-#        uses: github/codeql-action/init@v1
-#        with:
-#          config-file: ./.github/codeql/codeql_config.yaml
-#          external-repository-token: ${{ secrets.CI_TOKEN }}
-#          languages: python
-#
-#      - name: Perform CodeQL Analysis
-#        uses: github/codeql-action/analyze@v1
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          config-file: ./.github/codeql/codeql_config.yaml
+          external-repository-token: ${{ secrets.CI_TOKEN }}
+          languages: python
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
 
       - name: Build the transaction-import Docker image in ecr
         run: DOCKER_USERNAME=${GIT_USERNAME} DOCKER_PASSWORD=${GIT_KEY} DOCKERFILE_DIR=examples/transaction-import DOCKER_IMAGE=starcard-org/pti-docs/transaction-import-lambda make ecr-release
