--- a/examples/transaction-import/pyproject.toml
+++ b/examples/transaction-import/pyproject.toml
@@ -9,11 +9,11 @@ license = "MIT"
 python = "^3.8"
 pydantic = {extras = ["email"], version = "^1.8.2"}
 requests = "^2.26.0"
-docopt = "^0.6.2"
 coinaddr = "^1.0.1"
 jwcrypto = "^1.0"
 awslambdaric = "^1.2.2"
 boto3 = "^1.18.41"
+docopt-ng = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
