--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,7 @@
     "glob-parent": "^6.0.0",
     "immer": "^9.0.6",
     "normalize-url": "^6.0.1",
-    "postcss": "^7.0.36",
+    "nth-check": "^2.0.1",
     "set-value": "^4.1.0"
   }
 }
