--- a/examples/package.json
+++ b/examples/package.json
@@ -11,6 +11,7 @@
     "immer": "^9.0.6",
     "normalize-url": "^6.0.1",
     "nth-check": "^2.0.1",
-    "set-value": "^4.1.0"
+    "set-value": "^4.1.0",
+    "webpack": "^5.60.0"
   }
 }
