--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -11,6 +11,7 @@
     "@craco/craco": "^6.4.0",
     "@material-ui/core": "^4.12.3",
     "clsx": "^1.1.1",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0-next.47",
