--- a/examples/next-js-sdk-app/package.json
+++ b/examples/next-js-sdk-app/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "^11.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
