Make api domain parameter configurable

--- a/examples/ReactJsSdkApp/.env
+++ b/examples/ReactJsSdkApp/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASE_URL=apidev.pticlient.com
 REACT_APP_CLIENT_ID=3450582c-1955-11eb-adc1-0242ac120002
 REACT_APP_USER_ID=d19e2e0f-2f80-44c1-93ba-591b57a37173
+REACT_APP_API_DOMAIN=pti
