--- a/examples/next-js-sdk-app/package.json
+++ b/examples/next-js-sdk-app/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^11.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.2.0"
+    "http-proxy-middleware": "^2.0.1"
   }
 }
