--- a/examples/package.json
+++ b/examples/package.json
@@ -5,14 +5,8 @@
     "ReactJsSdkApp"
   ],
   "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "browserslist": "^4.16.6",
     "glob-parent": "^6.0.0",
-    "immer": "^9.0.6",
-    "normalize-url": "^6.0.1",
     "nth-check": "^2.0.1",
-    "postcss": "^8.4.5",
-    "set-value": "^4.1.0",
-    "webpack": "^5.60.0"
+    "postcss": "^8.4.5"
   }
 }
