--- a/examples/ReactJsSdkApp/.env
+++ b/examples/ReactJsSdkApp/.env
@@ -1,4 +1,4 @@
-REACT_APP_FORMS_URL=https://forms.apidev.pticlient.com
+REACT_APP_FORMS_URL=https://forms2.apidev.pticlient.com
 REACT_APP_API_URL=https://pti.apidev.pticlient.com/v0
 REACT_APP_JS_SDK_URL=https://sdk.apidev.pticlient.com/0.0.13/index.js
 REACT_APP_CLIENT_ID=3450582c-1955-11eb-adc1-0242ac120002
