--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -17,15 +17,15 @@
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mui/core": "^5.0.0-alpha.54",
-    "@mui/lab": "^5.0.0-alpha.73",
-    "@mui/material": "^5.5.1",
-    "@mui/icons-material": "^5.5.1",
+    "@mui/base": "^5.0.0-alpha.117",
+    "@mui/lab": "^5.0.0-alpha.119",
+    "@mui/material": "^5.11.8",
+    "@mui/icons-material": "^5.11.0",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
-    "react-scripts": "^5.0.0-next.58",
+    "react-scripts": "^5.1.0-next.14",
     "socket.io-client": "^4.0.0",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
