--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -15,15 +15,15 @@
   },
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mui/base": "^5.0.0-alpha.117",
     "@mui/lab": "^5.0.0-alpha.119",
     "@mui/material": "^5.11.8",
     "@mui/icons-material": "^5.11.0",
     "clsx": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-json-view": "^1.21.3",
     "react-scripts": "^5.1.0-next.14",
     "socket.io-client": "^4.0.0",
