Fix a bug which was making the demo app startup fail locally. Everytime there was a change in package.json, we had to delete the .lock file in order to make the app work. The reason being that yarn was getting confused by the use of 2 different react versions used by 2 projects in a same workspace.
Added @babel/plugin-proposal-private-property-in-object in dev dependencies to resolve a warning during startup.

--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -8,6 +8,7 @@
     "test": "craco test"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
     "stylelint": "^15.3.0",
