--- a/examples/PythonBackendApp/requirements.txt
+++ b/examples/PythonBackendApp/requirements.txt
@@ -1,28 +1,28 @@
-bidict==0.22.1 ; python_version >= "3.9" and python_version < "4.0"
-blinker==1.6.2 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2023.7.22 ; python_version >= "3.9" and python_version < "4.0"
-cffi==1.15.1 ; python_version >= "3.9" and python_version < "4.0"
-charset-normalizer==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
-cryptography==41.0.4 ; python_version >= "3.9" and python_version < "4.0"
-deprecated==1.2.14 ; python_version >= "3.9" and python_version < "4.0"
-flask-socketio==5.3.6 ; python_version >= "3.9" and python_version < "4.0"
-flask==2.3.3 ; python_version >= "3.9" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
-importlib-metadata==6.8.0 ; python_version >= "3.9" and python_version < "3.10"
-itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
-jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
-jwcrypto==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
-markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
-python-engineio==4.7.1 ; python_version >= "3.9" and python_version < "4.0"
-python-socketio==5.9.0 ; python_version >= "3.9" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
-simple-websocket==0.10.1 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==2.0.5 ; python_version >= "3.9" and python_version < "4.0"
-werkzeug==2.3.7 ; python_version >= "3.9" and python_version < "4.0"
-wrapt==1.15.0 ; python_version >= "3.9" and python_version < "4.0"
-wsproto==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
-zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
+bidict==0.22.1 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.6.2 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2023.7.22 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==41.0.4 ; python_version >= "3.10" and python_version < "4.0"
+deprecated==1.2.14 ; python_version >= "3.10" and python_version < "4.0"
+flask-socketio==5.3.6 ; python_version >= "3.10" and python_version < "4.0"
+flask==2.3.3 ; python_version >= "3.10" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+importlib-metadata==6.8.0 ; python_version >= "3.10" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+jwcrypto==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
+python-engineio==4.7.1 ; python_version >= "3.10" and python_version < "4.0"
+python-socketio==5.9.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+simple-websocket==0.10.1 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.0.5 ; python_version >= "3.10" and python_version < "4.0"
+werkzeug==2.3.7 ; python_version >= "3.10" and python_version < "4.0"
+wrapt==1.15.0 ; python_version >= "3.10" and python_version < "4.0"
+wsproto==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
+zipp==3.17.0 ; python_version >= "3.10" and python_version < "4.0"
