--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -16,21 +16,21 @@
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/base": "^5.0.0-alpha.121",
-    "@mui/lab": "^5.0.0-alpha.123",
-    "@mui/material": "^5.11.13",
-    "@mui/icons-material": "^5.11.11",
-    "clsx": "^1.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.20",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/lab": "^5.0.0-alpha.149",
+    "@mui/material": "^5.14.14",
+    "clsx": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-json-view": "^1.21.3",
     "react-scripts": "^5.1.0-next.14",
-    "socket.io-client": "^4.0.0",
-    "styled-components": "^5.3.9",
-    "uuid": "^9.0.0",
-    "zustand": "^4.3.6"
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.0",
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.3"
   },
   "resolutions": {
     "clean-css": "^5.2.2",
