--- a/examples/PythonBackendApp/requirements.txt
+++ b/examples/PythonBackendApp/requirements.txt
@@ -21,6 +21,7 @@ python-engineio==4.7.1 ; python_version >= "3.10" and python_version < "4.0"
 python-socketio==5.9.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
 simple-websocket==0.10.1 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.11.0 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.0.7 ; python_version >= "3.10" and python_version < "4.0"
 werkzeug==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
 wrapt==1.15.0 ; python_version >= "3.10" and python_version < "4.0"
