--- a/examples/ReactJsSdkApp/public/manifest.json
+++ b/examples/ReactJsSdkApp/public/manifest.json
@@ -4,13 +4,8 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "32x32 24x24 16x16",
+      "sizes": "48x48",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo101.png",
-      "type": "image/png",
-      "sizes": "101x101"
     }
   ],
   "start_url": ".",
