--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -9,32 +9,32 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
-    "stylelint": "^15.3.0",
-    "stylelint-config-standard": "^31.0.0"
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1"
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/base": "^5.0.0-beta.20",
-    "@mui/icons-material": "^5.14.14",
-    "@mui/lab": "^5.0.0-alpha.149",
-    "@mui/material": "^5.14.14",
-    "clsx": "^2.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/lab": "^6.0.0-beta.9",
+    "@mui/material": "^6.0.2",
+    "clsx": "^2.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-json-view": "^1.21.3",
-    "react-scripts": "^5.1.0-next.14",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.0",
-    "uuid": "^9.0.1",
-    "zustand": "^4.4.3"
+    "styled-components": "^6.1.13",
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.5"
   },
   "resolutions": {
-    "clean-css": "^5.2.2",
-    "postcss": "^8.4.31"
+    "clean-css": "^5.3.3",
+    "postcss": "^8.4.44"
   },
   "browserslist": {
     "production": [
