--- a/examples/package.json
+++ b/examples/package.json
@@ -5,8 +5,10 @@
     "ReactJsSdkApp"
   ],
   "resolutions": {
+    "express": "^4.21.0",
     "glob-parent": "^6.0.2",
     "nth-check": "^2.1.1",
-    "postcss": "^8.4.44"
+    "postcss": "^8.4.44",
+    "webpack-dev-server": "^5.1.0"
   }
 }
