--- a/examples/package.json
+++ b/examples/package.json
@@ -8,7 +8,6 @@
     "express": "^4.21.0",
     "glob-parent": "^6.0.2",
     "nth-check": "^2.1.1",
-    "postcss": "^8.4.44",
-    "webpack-dev-server": "^5.1.0"
+    "postcss": "^8.4.44"
   }
 }
