--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -9,32 +9,32 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "stylelint": "^16.9.0",
-    "stylelint-config-standard": "^36.0.1"
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "stylelint": "^16.18.0",
+    "stylelint-config-standard": "^38.0.0"
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^6.0.2",
     "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.0.2",
     "clsx": "^2.1.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-json-view": "^1.21.3",
     "react-scripts": "^5.0.1",
-    "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.13",
-    "uuid": "^10.0.0",
-    "zustand": "^4.5.5"
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.17",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "resolutions": {
     "clean-css": "^5.3.3",
-    "postcss": "^8.4.44"
+    "postcss": "^8.5.3"
   },
   "browserslist": {
     "production": [
